--- a/src/main/resources/templates/content.html
+++ b/src/main/resources/templates/content.html
@@ -10,7 +10,34 @@
 </head>
 <body>
 <header th:insert="fragments/header.html"></header>
+<th:block layout:fragment="script">
+    <script th:inline="javascript">
+        $(document).ready(function(){
+            var errorMessage = [[${errorMessage}]];
+            if(errorMessage != null){
+                alert(errorMessage);
+            }
 
+            bindDomEvent();
+
+        });
+
+        function bindDomEvent(){
+            $(".custom-file-input").on("change", function() {
+                var fileName = $(this).val().split("\\").pop();  //이미지 파일명
+                var fileExt = fileName.substring(fileName.lastIndexOf(".")+1); // 확장자 추출
+                fileExt = fileExt.toLowerCase(); //소문자 변환
+
+                if(fileExt != "jpg" && fileExt != "jpeg" && fileExt != "gif" && fileExt != "png" && fileExt != "bmp"){
+                    alert("이미지 파일만 등록이 가능합니다.");
+                    return;
+                }
+
+                $(this).siblings(".custom-file-label").html(fileName);
+            });
+        }
+    </script>
+</th:block>
 
 
 <div layout:fragment="content">
@@ -43,7 +70,7 @@
 
                         <div class="form-group">
                             <div th:if="${#lists.isEmpty(BoardFormDto.fileDtoList)}">
-                                <label th:for="inputFile"><strong>파일 첨부</strong></label>
+                                <label><strong>파일 첨부</strong></label>
                                 <div class="file-container" th:each="num: ${#numbers.sequence(1,2)}">
                                     <div class="custom-file img-div">
                                         <input type="file" class="custom-file-input" name="itemImgFile">
@@ -63,16 +90,16 @@
                             </div>
                         </div>
 
-<!--                        <div class="form-group">-->
-<!--                            <label for="inputFile"><strong>파일 첨부</strong></label>-->
-<!--                            <div class="file-container">-->
-<!--                                <input type="text" name="file-path" class="form-control file-path" id="inputFile" readonly />-->
-<!--                                <button type="button" class="btn btn-primary btn-file">파일 첨부</button>-->
+                        <!--                        <div class="form-group">-->
+                        <!--                            <label for="inputFile"><strong>파일 첨부</strong></label>-->
+                        <!--                            <div class="file-container">-->
+                        <!--                                <input type="text" name="file-path" class="form-control file-path" id="inputFile" readonly />-->
+                        <!--                                <button type="button" class="btn btn-primary btn-file">파일 첨부</button>-->
 
-<!--                                <button type="button" class="btn btn-primary btn-add" id="addButton">+</button>-->
-<!--                                <button type="button" class="btn btn-danger btn-remove" id="removeButton">-</button>-->
-<!--                            </div>-->
-<!--                        </div>-->
+                        <!--                                <button type="button" class="btn btn-primary btn-add" id="addButton">+</button>-->
+                        <!--                                <button type="button" class="btn btn-danger btn-remove" id="removeButton">-</button>-->
+                        <!--                            </div>-->
+                        <!--                        </div>-->
 
 
                         <div class="form-group text-center">
