--- a/src/main/resources/templates/contentview.html
+++ b/src/main/resources/templates/contentview.html
@@ -14,7 +14,7 @@
 <img src="../img/home.png" alt="home image" width="120" height="80" />
 <div layout:fragment="content">
 
-  <input type="hidden" id="BoardId" th:value="${boardDto.boardId}">
+  <input type="hidden" id="BoardId" th:value="${BoardFormDto.boardId}">
 
   <div class="container">
     <div class="row justify-content-center">
@@ -27,13 +27,19 @@
                 <label th:for="inputTitle"><strong>제목</strong></label>
                 <button type="button" class="btn btn-primary like-button" onclick="likeButtonClick()">❤</button>
               </div>
-              <input type="text" name="title" class="form-control" id="inputTitle" th:value="${boardDto.title}" readonly />
+              <input type="text" name="title" class="form-control" id="inputTitle" th:value="${BoardFormDto.title}" readonly />
             </div>
 
             <div class="form-group">
-              <label for="inputContent"><strong>내용</strong></label>
-              <p class="form-control my-textarea" aria-label="With textarea" th:text="${boardDto.content}" name="content" id="inputContent" rows="5"></p>
+              <div class="picture">
+                <img th:sr="${BoardFormDto.fileDtoList[0].fileUrl}" class = "rounded repImg" th:alt="${BoardFormDto.boardId}">
+              </div>
+                <label for="inputContent"><strong>내용</strong></label>
+              <p class="form-control my-textarea" aria-label="With textarea" th:text="${BoardFormDto
+              .content}" name="content" id="inputContent" rows="5"></p>
             </div>
+
+
 
             <div class="form-group">
               <label for="inputHashtag" ><strong>해시태그</strong></label>
@@ -64,10 +70,10 @@
             <!-- 페이지 수정 삭제-->
             <div class="form-group">
               <div class="btn-margin">
-                <button type="button" class="btn btn-primary writeButton" th:href="@{'/hbrg/ex01/'+${boardDto.boardId}}" onclick="location.href=this.getAttribute('href')">수정</button>
-<!--              글삭제(23/04/18 16:58)-->
-<!--                <button type="button" class="btn btn-secondary cancelButton" th:href="@{'/hbrg/ex02/delete/'+${boardDto.boardId}}" onclick="location.href=this.getAttribute('href')">삭제</button>-->
-                <button type="button" class="btn btn-secondary cancelButton" th:href="@{/hbrg/ex02/delete/{boardId}(boardId=${boardDto.boardId})}" onclick="location.href=this.getAttribute('href')">삭제</button>
+                <button type="button" class="btn btn-primary writeButton" th:href="@{'/hbrg/ex01/'+${BoardFormDto.boardId}}" onclick="location.href=this.getAttribute('href')">수정</button>
+                <!--              글삭제(23/04/18 16:58)-->
+                <!--                <button type="button" class="btn btn-secondary cancelButton" th:href="@{'/hbrg/ex02/delete/'+${BoardFormDto.boardId}}" onclick="location.href=this.getAttribute('href')">삭제</button>-->
+                <button type="button" class="btn btn-secondary cancelButton" th:href="@{/hbrg/ex02/delete/{boardId}(boardId=${BoardFormDto.boardId})}" onclick="location.href=this.getAttribute('href')">삭제</button>
 
                 <button onclick="location.href='/'" type="button" class="btn btn-secondary listButton">목록</button>
               </div>
