--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -9,7 +9,7 @@
 
 </head>
 <body>
-<header th:insert="fragments/header.html"></header>
+
 
 
 <!-- 검색창 부분 -->
@@ -130,7 +130,7 @@
     </form>
 </div>
 <div>
-    <footer th:insert="fragments/footer.html"></footer>
+
 </div>
 <script>
     $(document).ready(function() {
@@ -143,6 +143,28 @@
         // 데이터를 정렬하는 코드 작성
         }
     });
+
+    $.ajax({
+    type: "POST",
+    url: "/add-comment",
+    data: { "commentContent": commentContent },
+    success: function(response) {
+      // 서버에서 댓글 추가 요청 처리 후 응답을 받으면 실행되는 함수
+      // 추가된 댓글 정보를 기반으로 li 태그를 생성하고, 댓글 목록에 추가
+      var commentList = document.getElementById("commentList");
+      var newComment = document.createElement("li");
+      newComment.innerText = response.commentContent;
+      commentList.appendChild(newComment);
+
+      // 댓글 입력 폼 초기화
+      document.getElementById("inputComment").value = "";
+    },
+    error: function(jqXHR, textStatus, errorThrown) {
+      // 서버에서 댓글 추가 요청 처리 중 에러 발생 시 실행되는 함수
+      console.log("Error while adding comment: " + textStatus + ", " + errorThrown);
+    }
+  });
+}
 </script>
 </body>
 </html>
