--- a/src/main/resources/templates/users/userLoginForm.html
+++ b/src/main/resources/templates/users/userLoginForm.html
@@ -27,6 +27,7 @@
         <p th:if="${loginErrorMsg}" class="error" th:text="${loginErrorMsg}"></p>
         <button class="btn btn-primary loginButton" onclick="location.href='/'">로그인</button>
         <button type="button" class="btn btn-primary signupButton" onclick="location.href='/user/new'">회원가입</button>
+        <a href="https://kauth.kakao.com/oauth/authorize?client_id=cf4f271e8fd61d1f1504a1f182eff601&redirect_uri=http://localhost:8080/user/auth/kakao/callback&response_type=code"><img height="38px" src="/img/kakao_login_button.png"></a>
 <!--        <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">-->
       </form>
       <div style="position: relative; width: 100%; height: 20px; margin-top: -10px;">
