23/04/20 17:49 검색 기능 구현
검색 가능 정렬 실패

--- a/src/main/resources/templates/contentview.html
+++ b/src/main/resources/templates/contentview.html
@@ -32,7 +32,7 @@
 
             <div class="form-group">
               <div class="picture">
-                <img th:sr="${BoardFormDto.fileDtoList[0].fileUrl}" class = "rounded repImg" th:alt="${BoardFormDto.boardId}">
+<!--                <img th:sr="${BoardFormDto.fileDtoList[0].fileUrl}" class = "rounded repImg" th:alt="${BoardFormDto.boardId}">-->
               </div>
                 <label for="inputContent"><strong>내용</strong></label>
               <p class="form-control my-textarea" aria-label="With textarea" th:text="${BoardFormDto
