--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -3,6 +3,64 @@
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorate="~{layouts/layout1}">
 
+<!-- 사용자 스크립트 추가 -->
+<!--<th:block layout:fragment="script">-->
+<!--    <script th:inline="javascript">-->
+
+<!--        $(document).ready(function(){-->
+<!--            $("#dMB2").on("click",function(e) {-->
+<!--                e.preventDefault();-->
+<!--                page(0);-->
+<!--            });-->
+<!--        });-->
+
+<!--        function page(page){-->
+<!--            var searchDateType = $("#searchDateType").val();-->
+<!--            var searchBy = $("#searchBy").val();-->
+<!--            var searchQuery = $("#searchQuery").val();-->
+<!--            var sort = $("#sort").val(); // 새로 추가한 코드-->
+
+<!--            location.href="/" + page + "?searchDateType=" + searchDateType-->
+<!--            + "&searchBy=" + searchBy-->
+<!--            + "&searchQuery=" + searchQuery-->
+<!--            + "&sort=" + sort // 새로 추가한 코드-->
+<!--            + "&direction=DESC"; // 새로 추가한 코드-->
+<!--        }-->
+
+<!--    </script>-->
+<!--</th:block>-->
+
+<!-- 사용자 스크립트 추가 -->
+<th:block layout:fragment="script">
+    <script th:inline="javascript">
+        $(document).ready(function(){
+            // Add click event listener to page navigation button
+            $("#dMB2").on("click",function(e) {
+                e.preventDefault();
+                page(0);
+            });
+            // Add change event listener to sort criteria dropdown
+            $("#sort").on("change",function(e) {
+                e.preventDefault();
+                page(0);
+            });
+        });
+        function page(page){
+            var searchDateType = $("#searchDateType").val();
+            var searchBy = $("#searchBy").val();
+            var searchQuery = $("#searchQuery").val();
+            var sort = $("#sort").val();
+            // Build URL with search and sort parameters
+            var url = "/" + page + "?searchDateType=" + searchDateType + "&searchBy=" + searchBy + "&searchQuery=" + searchQuery;
+            if (sort) {
+                url += "&sort=" + sort;
+            }
+            url += "&direction=DESC";
+            location.href = url;
+        }
+    </script>
+</th:block>
+
 <head>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" />
     <link rel="stylesheet" href="/css/style.css" />
@@ -14,30 +72,31 @@
 
 <!-- 검색창 부분 -->
 <div layout:fragment="content" class="text-center" style="margin-top: 100px;">
-    <form>
+    <form layout:fragment="@{'/' + ${boards.number}}" role="form" method="GET" th:object="${boards}" class="form-inline justify-content-center">
         <!-- 검색 기능 구현 -->
-        <form action="/" method="GET" class="form-inline justify-content-center">
+<!--        <form action="/" method="GET" class="form-inline justify-content-center">-->
+        <form>
             <div class="row justify-content-center">
                 <div class="col-md-8">
-                    <div class="input-group" >
+                    <div class="input-group" th:object="${boardSearchDto}">
                         <div class="input-group-prepend ">
-                            <label for="searchType"></label>
-                            <select id="searchType" name="searchType" class="btn btn-outline-secondary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                <option value=""><a class="dropdown-item">전체</a></option>
-                                <option value="title"><a class="dropdown-item">제목</a></option>
-                                <option value="content"><a class="dropdown-item">본문</a></option>
-                                <option value="vc"><a class="dropdown-item">조회수</a></option>
+                            <select th:field="*{searchDateType}" class="btn btn-outline-secondary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                <option value="all"><a class="dropdown-item">전체기간</a></option>
+                                <option value="1d"><a class="dropdown-item">1일</a></option>
+                                <option value="1w"><a class="dropdown-item">1주</a></option>
+                                <option value="1m"><a class="dropdown-item">1개월</a></option>
+                                <option value="6m"><a class="dropdown-item">6개월</a></option>
                                 <!--                                <option value="blike">Blike</option>-->
                             </select>
-                            <!--                            <button class="btn btn-outline-secondary dropdown-toggle" type="button"-->
-                            <!--                                    id="dMB1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">-->
-                            <!--                                전체</button>-->
-                            <!--                            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">-->
-                            <!--                                <a class="dropdown-item" href="#">제목</a>-->
-                            <!--                                <a class="dropdown-item" href="#">본문</a>-->
-                            <!--                            </div>-->
+                            <select th:field="*{searchBy}" class="btn btn-outline-secondary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                <option value=""><a class="dropdown-item">전체</a></option>
+                                <option value="title"><a class="dropdown-item">제목</a></option>
+                                <option value="boardId"><a class="dropdown-item">번호</a></option>
+                                <option value="content"><a class="dropdown-item">본문</a></option>
+                                <!--                                <option value="blike">Blike</option>-->
+                            </select>
                         </div>
-                        <input name="searchKeyword" class="form-control mr-sm-2" id="searchKeyword"
+                        <input th:field="*{searchQuery}" class="form-control mr-sm-2"
                                type="text" placeholder="검색어를 입력하세요." aria-label="Search" style="width:250px;">
                         <button class="btn btn-outline-success my-2 my-sm-0"
                                 id="dMB2" type="submit">검색</button>
@@ -60,13 +119,28 @@
                                         <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenuButton1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                             번호
                                         </button>
-                                        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-                                            <a class="dropdown-item" href="?sort=boardId">번호</a>
-                                            <a class="dropdown-item" href="?sort=title">제목</a>
-                                            <a class="dropdown-item" href="?sort=vc">조회수</a>
-                                            <a class="dropdown-item" href="#">좋아요</a>
-                                            <a class="dropdown-item" href="?sort=regTime">생성일</a>
+<!--                                        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton1">-->
+<!--&lt;!&ndash;                                            <a class="dropdown-item" href="?sort=boardId">번호</a>&ndash;&gt;-->
+<!--&lt;!&ndash;                                            <a class="dropdown-item" href="?sort=title">제목</a>&ndash;&gt;-->
+<!--&lt;!&ndash;                                            <a class="dropdown-item" href="?sort=vc">조회수</a>&ndash;&gt;-->
+<!--&lt;!&ndash;                                            <a class="dropdown-item" href="#">좋아요</a>&ndash;&gt;-->
+<!--&lt;!&ndash;                                            <a class="dropdown-item" href="?sort=regTime">생성일</a>&ndash;&gt;-->
+<!--                                            <a class="dropdown-item" href="?sort=boardId&amp;direction=DESC">번호</a>-->
+<!--                                            <a class="dropdown-item" href="?sort=title&amp;direction=DESC">제목</a>-->
+<!--                                            <a class="dropdown-item" href="?sort=vc&amp;direction=DESC">조회수</a>-->
+<!--                                            <a class="dropdown-item" href="#&amp;direction=DESC">좋아요</a>-->
+<!--                                            <a class="dropdown-item" href="?sort=regTime&amp;direction=DESC">생성일</a>-->
+<!--                                        </div>-->
 
+                                        <div class="form-group mx-sm-3 mb-2">
+                                            <label for="sort">정렬 기준:</label>
+                                            <select class="form-control" id="sort" name="sort">
+                                                <option value="number">번호</option>
+                                                <option value="title">제목</option>
+                                                <option value="vc">조회수</option>
+<!--                                                <option value="likes">좋아요</option>-->
+                                                <option value="createdBy">생성일</option>
+                                            </select>
                                         </div>
                                     </div>
                                 </th>
@@ -127,21 +201,46 @@
                         </table>
                     </div>
 
-                    <!--                    &lt;!&ndash; 페이징 처리 &ndash;&gt;-->
-                    <ul class="pagination justify-content-center">
-                        <li class="page-item" th:class="${nowPage == 1 ? 'disabled' : ''}">
-                            <a class="page-link" th:if="${nowPage > 1}" th:href="@{/(page=${nowPage-2})}" th:text="이전"></a>
-                        </li>
-                        <th:block th:each="page:${#numbers.sequence(startPage,endPage)}">
-                            <li class="page-item">
-                                <a class="page-link" th:if="${page != nowPage}" th:href="@{/(page=${page-1})}" th:text="${page}"></a>
-                                <strong class="page-link" th:if="${page == nowPage}" th:text="${page}" style="font-style:bold"></strong>
+<!--                    페이징 처리-->
+                    <div th:with="start=${(boards.number/maxPage)*maxPage + 1}, end=(${(boards.totalPages == 0) ? 1 : (start + (maxPage - 1) < boards.totalPages ? start + (maxPage - 1) : boards.totalPages)})" >
+                        <ul class="pagination justify-content-center">
+
+                            <li class="page-item" th:classappend="${boards.first}?'disabled'">
+                                <a th:onclick="'javascript:page(' + ${boards.number - 1} + ')'" aria-label='Previous' class="page-link">
+                                    <span aria-hidden='true'>이전</span>
+                                </a>
                             </li>
-                        </th:block>
-                        <li class="page-item" th:class="${nowPage == endPage ? 'disabled' : ''}">
-                            <a class="page-link" th:unless="${nowPage == endPage}" th:href="@{/(page=${nowPage})}">다음</a>
-                        </li>
-                    </ul>
+
+                            <li class="page-item" th:each="page: ${#numbers.sequence(start, end)}" th:classappend="${boards.number eq page-1}?'active':''">
+                                <a th:onclick="'javascript:page(' + ${page - 1} + ')'" th:inline="text" class="page-link">[[${page}]]</a>
+                            </li>
+
+                            <li class="page-item" th:classappend="${boards.last}?'disabled'">
+                                <a th:onclick="'javascript:page(' + ${boards.number + 1} + ')'" aria-label='Next' class="page-link">
+                                    <span aria-hidden='true'>다음</span>
+                                </a>
+                            </li>
+
+                        </ul>
+                    </div>
+
+
+
+                    <!--                    &lt;!&ndash; 페이징 처리 &ndash;&gt;-->
+<!--                    <ul class="pagination justify-content-center">-->
+<!--                        <li class="page-item" th:class="${nowPage == 1 ? 'disabled' : ''}">-->
+<!--                            <a class="page-link" th:if="${nowPage > 1}" th:href="@{/(page=${nowPage-2})}" th:text="이전"></a>-->
+<!--                        </li>-->
+<!--                        <th:block th:each="page:${#numbers.sequence(startPage,endPage)}">-->
+<!--                            <li class="page-item">-->
+<!--                                <a class="page-link" th:if="${page != nowPage}" th:href="@{/(page=${page-1})}" th:text="${page}"></a>-->
+<!--                                <strong class="page-link" th:if="${page == nowPage}" th:text="${page}" style="font-style:bold"></strong>-->
+<!--                            </li>-->
+<!--                        </th:block>-->
+<!--                        <li class="page-item" th:class="${nowPage == endPage ? 'disabled' : ''}">-->
+<!--                            <a class="page-link" th:unless="${nowPage == endPage}" th:href="@{/(page=${nowPage})}">다음</a>-->
+<!--                        </li>-->
+<!--                    </ul>-->
                     <!-- 페이징 처리 -->
                     <!--                    <div>-->
                     <!--                        <ul class="pagination">-->
@@ -171,15 +270,5 @@
 <div>
     <!--    <footer th:insert="fragments/footer.html"></footer>-->
 </div>
-<script>
-        // 현재 검색 유형 선택 상태 유지
-        var searchType = document.getElementById("searchType");
-        for (var i = 0; i < searchType.options.length; i++) {
-            if (searchType.options[i].value === "${searchType}") {
-                searchType.options[i].selected = true;
-                break;
-            }
-        }
-    </script>
 </body>
 </html>
