--- a/src/main/resources/templates/layouts/layout1.html
+++ b/src/main/resources/templates/layouts/layout1.html
@@ -21,8 +21,6 @@
 <body>
 <div th:replace="fragments/header::header"></div>
 <div layout:fragment="content" class="content"></div>
-<!--
-<div th:replace="fragments/footer::footer"></div>
--->
+<!--<div th:replace="fragments/footer::footer"></div>-->
 </body>
 </html>
