--- a/src/main/resources/templates/contentview.html
+++ b/src/main/resources/templates/contentview.html
@@ -35,8 +35,6 @@
       }
     });
   });
-
-
  function showReReplyForm(button) {
         // 대댓글 작성 버튼을 클릭한 댓글 요소
         var replyElement = button.closest('.reply-list');
@@ -119,19 +117,60 @@
                                     <li class="reply-list" th:each="reply: ${replies}">
                                         <!-- 댓글 작성자 정보 -->
                                         <img th:src="@{/img/panda.png}" alt="판다캐릭터">
-                                        <span class="reply-author">(익명)</span>
+                                        <span class="reply-author">익명</span>
                                         <!-- 댓글 내용 -->
                                         <span th:text="${reply.reContent}" style="display:none;"></span>
-                                        <textarea class="form-control" style="border: none; resize: none;" readonly th:text="${reply.reContent}"></textarea>
-
+                                        <div class="textarea-wrapper">
+                                            <textarea class="form-control" style="border: none; resize: none;" readonly th:text="${reply.reContent}"></textarea>
+                                            <div class="btn-group btn-group-vertical" style="float: right ">
+                                                <!-- 수정 버튼 -->
+                                                <button type="button" class="btn btn-primary btn-sm btn-comment-action"
+                                                        th:data-reid="${reply.reId}"
+                                                        th:data-recontent="${reply.reContent}"
+                                                        onclick="editReply(this)">
+                                                    <img src="/img/edit.png" alt="Edit" width="16" height="16">
+                                                </button>
+                                                <!-- 삭제 버튼 -->
+                                                <form th:action="@{'/hbrg/' + ${reply.reId} +'/delete' }" method="post"
+                                                      th:object="${BoardFormDto}">
+                                                    <input type="hidden" value="delete"/>
+                                                    <input type="hidden" name="boardId" th:value="${BoardFormDto.boardId}"/>
+                                                    <button type="submit" class="btn btn-danger btn-sm btn-comment-action">
+                                                        <img src="/img/delete.png" alt="Delete" width="16" height="16">
+                                                    </button>
+                                                </form>
+                                            </div>
+                                        </div>
                                         <!-- 대댓글 작성 버튼 -->
-                                        <button type="button" class="btn btn-link btn-sm" onclick="showReReplyForm(this)">대댓글 달기</button>
+                                        <button type="button" class="btn btn-link btn-sm" onclick="showReReplyForm(this)">답글</button>
 
                                         <!-- 대댓글 리스트 -->
                                         <ul id="reCommentList" th:if="${#vars['reReplies_' + reply.reId]}">
                                             <li class="rereply-list" th:each="reReply : ${#vars['reReplies_' + reply.reId]}">
+                                                <img th:src="@{/img/panda.png}" alt="판다캐릭터">
+                                                <span class="reply-author">익명</span>
                                                 <span th:text="${reReply.reReContent}" style="display:none;"></span>
-                                                <textarea class="form-control" style="border: none; resize: none;" readonly th:text="${reReply.reReContent}"></textarea>
+                                                <div class="textarea-wrapper">
+                                                    <textarea class="form-control" style="border: none; resize: none;" readonly th:text="${reReply.reReContent}"></textarea>
+                                                    <div class="btn-group btn-group-vertical" style="float: right ">
+                                                        <!-- 수정 버튼 -->
+                                                        <button type="button" class="btn btn-primary btn-sm btn-comment-action"
+                                                                th:data-rereid="${reReply.reReId}"
+                                                                th:data-rerecontent="${reReply.reReContent}"
+                                                                onclick="editReReply(this)">
+                                                            <img src="/img/edit.png" alt="Edit" width="16" height="16">
+                                                        </button>
+                                                        <!-- 삭제 버튼 -->
+                                                        <form th:action="@{'/hbrg/' + ${reReply.reReId} +'/delete' }" method="post"
+                                                              th:object="${BoardFormDto}">
+                                                            <input type="hidden" value="delete"/>
+                                                            <input type="hidden" name="boardId" th:value="${BoardFormDto.boardId}"/>
+                                                            <button type="submit" class="btn btn-danger btn-sm btn-comment-action">
+                                                                <img src="/img/delete.png" alt="Delete" width="16" height="16">
+                                                            </button>
+                                                        </form>
+                                                    </div>
+                                                </div>
                                             </li>
                                         </ul>
 
@@ -139,7 +178,7 @@
                                         <form class="reply-form" style="display: none;" th:action="@{'/hbrg/' + ${reply.reId} +'/reReply' }" method="post"
                                               th:object="${reReplyFormDto}">
                                             <div class="form-group">
-                                                <label th:for="inputReComment">대댓글 내용</label>
+                                                <label th:for="inputReComment"></label>
                                                 <div class="comment-container">
                                                     <input type="text" th:field="*{reReContent}" name="reComment" class="form-control comment-input" id="inputReComment" />
                                                     <button type="submit" class="btn btn-primary btn-comment btn-sm">작성하기</button>
@@ -150,27 +189,6 @@
                                             <input type="hidden" th:field="*{reId}" th:value="${reply.reId}"/>
                                             <input type="hidden" name="reId" value="${reply.reId}" />
                                         </form>
-
-
-
-                                        <div class="btn-group" style="float: right;">
-                                            <!-- 수정 버튼 -->
-                                            <button type="button" class="btn btn-primary btn-sm btn-comment-action"
-                                                    th:data-reid="${reply.reId}"
-                                                    th:data-recontent="${reply.reContent}"
-                                                    onclick="editReply(this)">
-                                                <img src="/img/edit.png" alt="Edit" width="16" height="16">
-                                            </button>
-                                            <!-- 삭제 버튼 -->
-                                            <form th:action="@{'/hbrg/' + ${reply.reId} +'/delete' }" method="post"
-                                                  th:object="${BoardFormDto}">
-                                                <input type="hidden" value="delete"/>
-                                                <input type="hidden" name="boardId" th:value="${BoardFormDto.boardId}"/>
-                                                <button type="submit" class="btn btn-danger btn-sm btn-comment-action">
-                                                    <img src="/img/delete.png" alt="Delete" width="16" height="16">
-                                                </button>
-                                            </form>
-                                        </div>
                                     </li>
                                 </ul>
                             </div>
